--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <h1 header= Hey ther I have a cool site>
 
-  </h1>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
 <body>
+  <h1> header= Hey there I have a cool site
+  </h1>
   
 </body>
 </html>
