--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body>
-  <h1> header= Hey there I have a cool site
+<body bgcolor="black">
+  <h1>
+    <font color="white">    Hey there I have a cool site
   </h1>
   
 </body>
