--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body bgcolor="black">
-  <h1>
-    <font color="white">    Hey there I have a cool site
+<body>
+
+  <header>
+     <div class="one"> <h1>Hey there I have a cool site</h1> </div>
+  </header> 
+  <div class="empty">  </div>
+  <div class="two">
+  <h2> Why designers are important!</h2>
+  <h3><b>Lorem Ipsum</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h3> 
+</div>
+<div class=left> 
+</div>
+<div class=right> 
+</div>
+  <footer> <h1>
+    
   </h1>
-  
+  </footer>
 </body>
 </html>
